# trenches

./: .gitignore  Anchor.toml  README.md  bun.lockb  package.json
.next/: app-build-manifest.json  trace
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
anchor-program/: Anchor.toml
anchor-program/programs/bonding-curve/: Cargo.toml
anchor-program/programs/bonding-curve/src/: error.rs  lib.rs
anchor-program/programs/bonding-curve/src/contexts/: create_caller.rs  mod.rs
anchor-program/programs/bonding-curve/src/state/: caller.rs  mod.rs
anchor-program/tests/: bonding-curve.ts
back/: README.md  bun.lockb  index.js  index.ts  main.js  main.ts  package-lock.json  package.json
back/prisma/: schema.prisma
backend/: .env.vault  .gitignore  README.md  callers.csv  eslint.config.mjs.skip  jest.config.js  package-lock.json  package.json  pumpportal.mjs  tsconfig.jest.json  tsconfig.json
backend/data/: callers.sql
backend/docs/: console.md
backend/env/: development.env
backend/prisma/: schema.prisma
backend/src/: bootstrap.js  bootstrap.ts  bot.ts  console.ts  createcallerspl.ts  index.ts  index_test.ts  jest.setup.ts  main.js  main.ts  server.ts  types.ts
backend_two/: .env.vault  .gitignore  package-lock.json  package.json
backend_two/prisma/: seed.ts
front/: .env.vault  .gitignore  README.md  next-sitemap.config.js  package-lock.json  package.json  pnpm-lock.yaml
spl_token_template/: mint.js  mint.ts  package-lock.json  package.json  token.json  tsconfig.json
tests/: trenches.ts
(+162 files in other folders)
