[package]
name = "bonding_curve"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-spl = { version = "0.30.0", features = ["metadata"] }
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
solana-program = "1.18.13"
mpl-token-metadata = "4.1.2"
# Solana dependency tree fixes
ahash = "=0.8.11"
